[gd_scene load_steps=16 format=2]

[ext_resource path="res://art/anemy/twoeyesmall/twoeyesmall3.png" type="Texture" id=1]
[ext_resource path="res://art/anemy/twoeyesmall/twoeyesmall2.png" type="Texture" id=2]
[ext_resource path="res://art/anemy/twoeyesmall/twoeyesmall1.png" type="Texture" id=3]
[ext_resource path="res://art/anemy/twoeyesmall/twoeyesmall4.png" type="Texture" id=4]
[ext_resource path="res://art/anemy/twoeyesmall/twoeyesmall5.png" type="Texture" id=5]
[ext_resource path="res://twoeyes.gd" type="Script" id=6]
[ext_resource path="res://guntwoeyes.gd" type="Script" id=7]
[ext_resource path="res://sound/hits/zapsplat_impacts_body_hit_baseball_bat_hard_whack_crack_squelchy_bloody_005_44151.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "active",
"speed": 9.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.10001, 4.31191 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.71022, 1.71572 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.55693, 4.69753 )

[sub_resource type="Animation" id=5]
resource_name = "fade"

[sub_resource type="Animation" id=6]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 0.707107, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( 10, 5 ), Vector2( 10, 10 ), Vector2( 5, 15 ), Vector2( 0, 15 ), Vector2( -5, 15 ), Vector2( -10, 10 ), Vector2( -10, 5 ), Vector2( -5, 0 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 260.182

[node name="twoeyes" type="KinematicBody2D" groups=[
"enemie",
]]
collision_layer = 64
collision_mask = 62
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "active"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="gun" type="KinematicBody2D" parent="."]
collision_layer = 64
collision_mask = 63
script = ExtResource( 7 )

[node name="Position2D" type="Position2D" parent="gun"]
position = Vector2( -0.018528, 0.164404 )
__meta__ = {
"_gizmo_extents_": 0.2
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun"]
position = Vector2( -0.0227203, 9.87197 )
shape = SubResource( 3 )
disabled = true

[node name="shoottime" type="Timer" parent="gun"]
wait_time = 3.0
autostart = true

[node name="colliderstwo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colliderstwo"]
shape = SubResource( 4 )

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/fade = SubResource( 5 )
anims/move = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 7 )

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="gun/shoottime" to="gun" method="_on_shoottime_timeout"]
[connection signal="body_entered" from="colliderstwo" to="." method="_on_colliderstwo_body_entered"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="gun" method="_on_Area2D_body_entered"]
